--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "acados"]
 	path = acados
 	url = https://github.com/acados/acados.git
+[submodule "3rdParty"]
+	path = 3rdParty
+	url = https://github.com/acados/acados.git
+[submodule "3rdParty/acados"]
+	path = 3rdParty/acados
+	url = https://github.com/acados/acados.git
