--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3rdParty"]
 	path = 3rdParty
 	url = https://github.com/acados/acados.git
+[submodule "3rdParty/acados"]
+	path = 3rdParty/acados
+	url = https://github.com/ZandorTeseling/acados.git
