CMakeLists.txt --Add executable main_sim_second_order_ode_dt.c to debug.
delayed_soode_sim.py
--general update.

export_so_ode_model_continous_and_discrete.py
--augment the continous time model with the input delay to test discrete model simulation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,18 @@ set(ACADOS_EXAMPLES ON)
 set(BUILD_SHARED_LIBS ON)
 
 add_subdirectory( ${PROJECT_SOURCE_DIR}/3rdParty )
+
+
+file(GLOB DICSRETE_MODEL_SRC
+    ${CMAKE_CURRENT_SOURCE_DIR}/MHE-DelayedSystem/c_generated_code/second_order_ode_dt_model/second_order_ode_dt_dyn_disc_phi_fun.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/MHE-DelayedSystem/c_generated_code/second_order_ode_dt_model/second_order_ode_dt_dyn_disc_phi_fun_jac.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/MHE-DelayedSystem/c_generated_code/second_order_ode_dt_model/second_order_ode_dt_dyn_disc_phi_fun_jac_hess.c
+    #${CMAKE_CURRENT_SOURCE_DIR}/MHE-DelayedSystem/c_generated_code/second_order_ode_dt_model/second_order_ode_dt_model.h
+)
+
+add_executable(discrete_sim  ${CMAKE_CURRENT_SOURCE_DIR}/MHE-DelayedSystem/c_generated_code/main_sim_second_order_ode_dt.c
+                             ${CMAKE_CURRENT_SOURCE_DIR}/MHE-DelayedSystem/c_generated_code/acados_sim_solver_second_order_ode_dt.c
+                             #${CMAKE_CURRENT_SOURCE_DIR}/MHE-DelayedSystem/c_generated_code/acados_sim_solver_second_order_ode_dt.h
+                             ${DICSRETE_MODEL_SRC})
+target_link_libraries(discrete_sim acados)
+
